github-readme-stats/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-readme-stats
  namespace: github-readme-stats
  labels:
    app: github-readme-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-readme-stats
  template:
    metadata:
      labels:
        app: github-readme-stats
    spec:
      containers:
        - name: github-readme-stats
          image: wololoaeyoyo/github-readme-stats:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
