github-readme-stats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-readme-stats-service
  namespace: github-readme-stats
  labels:
    app: github-readme-stats
spec:
  type: ClusterIP
  selector:
    app: github-readme-stats
  ports:
    - name: http
      port: 3000
      targetPort: 3000
