github-readme-stats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-readme-stats-ingress
  namespace: github-readme-stats
  labels:
    app: github-readme-stats
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: github-readme-stats.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-readme-stats-service
                port:
                  number: 3000
